--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
+    margin-bottom: 25px;
 
     .img {
         height: 200px;
@@ -13,6 +14,7 @@
         img {
             height: 100%;
             width: 100%;
+            object-fit: cover;
         }
     }
 
