--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -15,6 +15,8 @@
     width: 100%;
     height: 400px;
     @include simpleBGImage('../assets/img/blog-hero.jpg');
+    background-position: 75% 50%;
+
 
     h1 {
         @extend %header-text;
@@ -37,7 +39,7 @@
     width: 100%;
     height: 300px;
     @include normalBGImage('../assets/img/about-hero.jpg', transparent, $text-color);
-    background-position: 100% 30%;
+    background-position: 40% 30%;
 
     h1 {
         @extend %header-text;
